Fixed Dark Mode

--- a/css/_dark.scss
+++ b/css/_dark.scss
@@ -13,16 +13,4 @@ body.dark-theme {
       }
     }
   }
-
-  .contact {
-    .icons {
-
-      a,
-      :visited,
-      :hover,
-      :focus {
-        color: $dark-theme-text;
-      }
-    }
-  }
 }
